--- a/src/App.css
+++ b/src/App.css
@@ -2,4 +2,162 @@
   text-align: center;
 }
 
+.main {
+  display: flex;
+  flex-direction: column;
+  width: 600px;
+  max-width: 100%;
+  background-color: #fff;
+  padding: 30px 20px;
+  border: 1px solid #000;
+  border-radius: 5px;
+  margin: 10px;
+}
 
+.main1 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 25px;
+}
+
+.main2 {
+  text-align: center;
+  border: 1px solid #000;
+  padding: 20px;
+  border-radius: 5px;
+  margin-bottom: 25px;
+}
+
+.main3 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border: 1px solid #e6e8e9;
+  background-color: #fff;
+  border-radius: 5px;
+  padding: 10px 20px;
+  margin-bottom: 10px;
+  cursor: pointer;
+
+}
+
+.inp {
+  width: 100%;
+  padding: 15px 20px;
+  outline: none;
+  border-radius: 5px;
+  margin: 5px 0;
+  border: 1px solid #000;
+}
+
+
+.btn1 {
+  background-color: #44E610;
+  color: #fff;
+  border-radius: 5px;
+  padding: 10px 20px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+.btn1:hover {
+  background-color: #44E610;
+
+}
+
+.balance {
+  font-weight: 500;
+  font-weight: bold;
+
+}
+
+.btn {
+  cursor: pointer;
+  background-color: rgb(68, 230, 16);
+  color: rgb(255, 255, 255);
+  padding: 7px 20px;
+  font-size: 16px;
+  border: none;
+  text-transform: uppercase;
+  border-radius: 5px;
+}
+
+.rmvbtn {
+  background-color: red;
+  color: white;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.head {
+  font-size: 30px;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 20px;
+  color: orange;
+}
+
+.TransactionDetails {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 25px;
+}
+
+.radiob {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.lbl {
+  margin-left: 10px;
+  cursor: pointer;
+}
+
+.rdio {
+  margin: 10px 20px 10px 0;
+
+}
+
+.expense {
+  flex: 1;
+  border: 1px solid #000;
+  border-radius: 5px;
+  padding: 10px 20px;
+  background-color: #fff;
+}
+
+.expense span{
+  font-weight: bold; 
+	font-size: 25px; 
+	display: block; 
+	color: red; 
+}
+
+.budget{
+  flex: 1;
+  border: 1px solid #000;
+  border-radius: 5px;
+  padding: 10px 20px;
+  background-color: #fff;
+
+}
+
+.budget span{
+  font-weight: bold; 
+	font-size: 25px; 
+	display: block; 
+	color: green; 
+}
+
+.head1 {
+  color: blue;
+  font-size: 25px;
+  font-weight: 600;
+}
